corrections to comments